<resources>
    <string name="app_name">OpenWRTAndroidClient</string>
    <string name="action_settings">Settings</string>

    <string name="menu_status">Status</string>
    <string name="menu_system">System</string>
    <string name="menu_network">Network</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_status_overview">Overview</string>
    <string name="menu_status_firewall">Firewall</string>
    <string name="menu_status_routes">Routes</string>

    <string name="title_activity_login">Open WRT Info</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
