<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menu_status" android:title="@string/menu_status"
        android:orderInCategory="100" app:showAsAction="never"
        android:onClick="menuSwitch"/>
    <item android:id="@+id/menu_system" android:title="@string/menu_system"
        android:orderInCategory="100" app:showAsAction="never"
        android:onClick="menuSwitch"/>
    <item android:id="@+id/menu_network" android:title="@string/menu_network"
        android:orderInCategory="100" app:showAsAction="never"
        android:onClick="menuSwitch"/>

    <!-- Temporary sub categories, left here until menu's fixed -->
    <item android:id="@+id/menu_status_firewall" android:title="@string/menu_status_firewall"
        android:orderInCategory="100" app:showAsAction="never"
        android:onClick="menuSwitch"/>
    <item android:id="@+id/menu_status_routes" android:title="@string/menu_status_routes"
        android:orderInCategory="100" app:showAsAction="never"
        android:onClick="menuSwitch"/>
    <!-- -->

    <item android:id="@+id/menu_logout" android:title="@string/menu_logout"
        android:orderInCategory="100" app:showAsAction="never"
        android:onClick="menuSwitch"/>
</menu>
